Finished logic for DayMuscleGroupServiceImpl.updateRecommendedSetsForNext and fixed mistake in DayExercise field